[gd_scene load_steps=14 format=2]

[ext_resource path="res://space-wolves/HUD.gd" type="Script" id=1]
[ext_resource path="res://addons/toolbox_project/assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/jura/JuraDemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://space-wolves/utilities/CurveTween.gd" type="Script" id=4]
[ext_resource path="res://assets/resources/standard_curve.tres" type="Curve" id=5]
[ext_resource path="res://space-wolves/DraggableRadialButton/DraggableButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://space-wolves/label-font-override.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/BabsStyleBoxFlat.tres" type="StyleBox" id=8]

[sub_resource type="DynamicFont" id=1]
size = 22
extra_spacing_top = -5
extra_spacing_bottom = -5
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0392157, 0.129412, 0.329412, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.00784314, 0.027451, 0.0627451, 1 )
border_blend = true

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BaseBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="TopBox" type="HBoxContainer" parent="MarginContainer/BaseBox"]
margin_right = 1004.0
margin_bottom = 128.0
size_flags_vertical = 3
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="MarginContainer/BaseBox/TopBox"]
margin_right = 1004.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/BaseBox/TopBox/LeftBox"]
margin_right = 1004.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
max_value = 30.0
step = 1.0
percent_visible = false

[node name="Label" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Time until next generation"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/BaseBox/TopBox/LeftBox"]
margin_top = 24.0
margin_right = 1004.0
margin_bottom = 49.0

[node name="Cash" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/HBoxContainer"]
margin_right = 94.0
margin_bottom = 25.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Cash: $0"

[node name="Round" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/HBoxContainer"]
margin_left = 918.0
margin_right = 1004.0
margin_bottom = 25.0
size_flags_horizontal = 10
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Round 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer/BaseBox/TopBox/LeftBox"]
margin_top = 49.0
margin_right = 143.0
margin_bottom = 128.0
size_flags_horizontal = 0
custom_constants/vseparation = 2
custom_constants/hseparation = 4
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PredatorLabel" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/GridContainer"]
margin_right = 109.0
margin_bottom = 25.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = ExtResource( 8 )
text = "Predators"

[node name="PredatorPop" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/GridContainer"]
margin_left = 113.0
margin_right = 143.0
margin_bottom = 25.0
size_flags_horizontal = 7
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = ExtResource( 8 )
text = "55"
align = 1

[node name="PreyLabel" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/GridContainer"]
margin_top = 27.0
margin_right = 109.0
margin_bottom = 52.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = ExtResource( 8 )
text = "Prey"

[node name="PreyPop" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/GridContainer"]
margin_left = 113.0
margin_top = 27.0
margin_right = 143.0
margin_bottom = 52.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
custom_styles/normal = ExtResource( 8 )
text = "54"
align = 1

[node name="ResourseLabel" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/GridContainer"]
margin_top = 54.0
margin_right = 109.0
margin_bottom = 79.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = ExtResource( 8 )
text = "Flora"

[node name="ResoursePop" type="Label" parent="MarginContainer/BaseBox/TopBox/LeftBox/GridContainer"]
margin_left = 113.0
margin_top = 54.0
margin_right = 143.0
margin_bottom = 79.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_styles/normal = ExtResource( 8 )
text = "55"
align = 1

[node name="MiddleBox" type="HBoxContainer" parent="MarginContainer/BaseBox"]
margin_top = 144.0
margin_right = 1004.0
margin_bottom = 480.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="ZoomBox" type="VBoxContainer" parent="MarginContainer/BaseBox/MiddleBox"]
margin_right = 57.0
margin_bottom = 336.0
custom_constants/separation = -1

[node name="ZoomLabel" type="Label" parent="MarginContainer/BaseBox/MiddleBox/ZoomBox"]
margin_right = 57.0
margin_bottom = 27.0
text = "Zoom"

[node name="ZoomButtonBox" type="HBoxContainer" parent="MarginContainer/BaseBox/MiddleBox/ZoomBox"]
margin_top = 26.0
margin_right = 57.0
margin_bottom = 68.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomIn" type="Button" parent="MarginContainer/BaseBox/MiddleBox/ZoomBox/ZoomButtonBox"]
margin_right = 28.0
margin_bottom = 42.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "+"

[node name="ZoomOut" type="Button" parent="MarginContainer/BaseBox/MiddleBox/ZoomBox/ZoomButtonBox"]
margin_left = 28.0
margin_right = 57.0
margin_bottom = 42.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 2
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "-"

[node name="BottomBox" type="MarginContainer" parent="MarginContainer/BaseBox"]
margin_top = 496.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 175
custom_constants/margin_left = 175
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="Panel" parent="MarginContainer/BaseBox/BottomBox"]
margin_left = 175.0
margin_right = 829.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="Title" type="Label" parent="MarginContainer/BaseBox/BottomBox/BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 7 )
text = "Problem detected! Fix it before current generation ends!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="MarginContainer/BaseBox/BottomBox/BottomPanel"]
modulate = Color( 0.901961, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 7 )
text = "Warning: Lose Condition imminent!"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurveTween" type="Tween" parent="."]
script = ExtResource( 4 )
curve = ExtResource( 5 )

[node name="AlertBox" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.0
margin_top = -46.5
margin_right = 233.0
margin_bottom = 46.5
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
dialog_text = "You don't have enough money for this action!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggableButton" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0

[connection signal="curve_tween" from="CurveTween" to="." method="_on_CurveTween_curve_tween"]
